--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
 <body>
 <h1> hi, fernando uvuveveve
-<img src="Screenshot_20191206_194344.jpg" width="1080" height="1097" />
+<img src="IMG_20191206_204331.jpg" width="1080" height="1097" />
 </body>
 </html>
