--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h1> hi, fernando uvuveveve
+<h1> ga ada modal, baju pun dipake ulang"<br>
 <img src="IMG_20191206_204331.jpg" width="1080" height="1097" />
 </body>
 </html>
